--- a/XNCAP.HTML
+++ b/XNCAP.HTML
@@ -386,9 +386,9 @@
                 </td>
                 <td><input type="number" id="soDau${cableCount}" class="table-input" required></td>
                 <td><input type="number" id="soCuoi${cableCount}" class="table-input" required></td>
-                <td><input type="text" id="chungLoai${cableCount}" class="table-input" required></td>
+                <td><input type="text" id="chungLoai${cableCount}" class="table-input" ></td>
                 <td><input type="text" id="maCap${cableCount}" class="table-input" required></td>
-                <td><input type="number" id="namSanXuat${cableCount}" class="table-input" required></td>
+                <td><input type="number" id="namSanXuat${cableCount}" class="table-input" ></td>
                 <td><button type="button" class="remove-cable">Xóa</button></td>
             `);
             $('#cableList').append(newRow);
