--- a/AddDuan.html
+++ b/AddDuan.html
@@ -181,8 +181,8 @@
 
         // Khởi tạo dữ liệu mới
         const duLieu = {
-            khuVuc: ['FPT-HCM', 'FPT-BDG', 'FPT-VTU', 'FPT-TNH', 'FPT-BPC', 'FPT-BTN', 'FPT-LAN', 'NZ-HCM', 'Intecom', 'FPT-DNI', 'Nhật Minh', 'PA VietNam', 'BPC'],
-            keHoach: ['SGxBuiding', 'Di dời', 'Ngầm hóa', 'FTI', 'AON', 'Nâng Cấp', 'XLSC', 'Cắt chuyển', 'Metro', 'Hot', 'Thu hồi', 'Intecom', 'Bảo trì', 'Ring'],
+            khuVuc: ['FPT-HCM', 'FPT-BDG', 'FPT-VTU', 'FPT-BPC','FPT-DNI', 'NZ-HCM', 'Intecom', 'Nhật Minh', 'PA VietNam', 'BPC'],
+            keHoach: ['SGx','Buiding', 'Di dời', 'Ngầm hóa', 'FTI', 'AON', 'Nâng Cấp', 'XLSC', 'Cắt chuyển', 'Metro', 'Hot', 'Thu hồi', 'Intecom', 'Bảo trì', 'Ring'],
             nguoiGiaoViec: ['Giáp VV', 'Cường TV', 'Sơn VT', 'Nghi NV', 'Thạo NT', 'Cường TQ', 'Kiệt NH', 'QLVH1 (Khiêm ND)', 'QLVH2 (Quý NT)', 'QLVH2 (Thế Anh)', 'QLVH3 (Thiện LTQ)', 'QLVH3 (Nguyên DT)', 'QLVH3 (Quang P)', 'QLVH3 (Khoa NA)', 'Cường LĐ', 'Sơn ĐT', 'Vương NN', 'Nhật NH', 'Hùng NQ DNI', 'Intecom', 'Nhật Minh', 'PhatMA', 'PA VietNam', 'ThanhTNM', 'Nam NQ', 'ThanhNT DNI'],
             giamSat: ['Giám sát A', 'Giám sát B', 'Giám sát C']
         };
