--- a/AddDuan.html
+++ b/AddDuan.html
@@ -57,7 +57,7 @@
                         <input type="text" id="pop" name="pop" required
                             class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
                     </div>
-                    
+
                 </div>
                 <div>
                     <div>
@@ -181,8 +181,8 @@
 
         // Khởi tạo dữ liệu mới
         const duLieu = {
-            khuVuc: ['FPT-HCM', 'FPT-BDG', 'FPT-VTU', 'FPT-BPC','FPT-DNI', 'NZ-HCM', 'Intecom', 'Nhật Minh', 'PA VietNam', 'BPC'],
-            keHoach: ['SGx','Buiding', 'Di dời', 'Ngầm hóa', 'FTI', 'AON', 'Nâng Cấp', 'XLSC', 'Cắt chuyển', 'Metro', 'Hot', 'Thu hồi', 'Intecom', 'Bảo trì', 'Ring'],
+            khuVuc: ['FPT-HCM', 'FPT-BDG', 'FPT-VTU', 'FPT-BPC', 'FPT-DNI', 'NZ-HCM', 'Intecom', 'Nhật Minh', 'PA VietNam', 'BPC'],
+            keHoach: ['SGx', 'Buiding', 'Di dời', 'Ngầm hóa', 'FTI', 'AON', 'Nâng Cấp', 'XLSC', 'Cắt chuyển', 'Metro', 'Hot', 'Thu hồi', 'Intecom', 'Bảo trì', 'Ring'],
             nguoiGiaoViec: ['Giáp VV', 'Cường TV', 'Sơn VT', 'Nghi NV', 'Thạo NT', 'Cường TQ', 'Kiệt NH', 'QLVH1 (Khiêm ND)', 'QLVH2 (Quý NT)', 'QLVH2 (Thế Anh)', 'QLVH3 (Thiện LTQ)', 'QLVH3 (Nguyên DT)', 'QLVH3 (Quang P)', 'QLVH3 (Khoa NA)', 'Cường LĐ', 'Sơn ĐT', 'Vương NN', 'Nhật NH', 'Hùng NQ DNI', 'Intecom', 'Nhật Minh', 'PhatMA', 'PA VietNam', 'ThanhTNM', 'Nam NQ', 'ThanhNT DNI'],
             giamSat: ['Giám sát A', 'Giám sát B', 'Giám sát C']
         };
@@ -264,8 +264,7 @@
                             "Điểm đầu": row.querySelector('[data-field="diemDau"]').value,
                             "Điểm cuối": row.querySelector('[data-field="diemCuoi"]').value,
                             "Loại cáp": row.querySelector('[data-field="loaiCap"]').value,
-                            "Dự toán": row.querySelector('[data-field="duToan"]').value,
-                            "Đội kéo": row.querySelector('[data-field="doiKeo"]').value
+                            "Dự toán": row.querySelector('[data-field="duToan"]').value
                         };
                         if (!rowData["Tuyến cáp"] || !rowData["Điểm đầu"] || !rowData["Điểm cuối"] || !rowData["Loại cáp"] || !rowData["Dự toán"]) {
                             FuiToast.info('Vui lòng điền đủ thông tin các dòng bạn đã thêm vào báo cáo giáo sát')
