--- a/AddDuan.html
+++ b/AddDuan.html
@@ -7,6 +7,8 @@
     <title>Form Nhập Thông Tin Kế Hoạch</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
+    
+    <link rel="shortcut icon" href="Logo N có bóng/Logo N.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/gh/lelinh014756/fui-toast-js@master/assets/css/toast@1.0.1/fuiToast.min.css">
     <script type="text/javascript"
